--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,121 +10,179 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-            background-color: #f9f9f9;
             color: #333;
+            margin: 0;
+            padding: 20px;
+            background-color: #f9f9f9;
         }
-        h1, h2 {
-            color: #2C3E50;
-        }
+
         h1 {
             text-align: center;
+            color: #4CAF50;
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        p {
+            margin: 10px 0;
+        }
+
+        .contact-info {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #e7f3e7;
+            border-left: 5px solid #4CAF50;
+        }
+
+        .section {
             margin-bottom: 20px;
         }
-        h2 {
+
+        .footer {
             margin-top: 20px;
-        }
-        p {
-            margin-bottom: 10px;
-        }
-        .contact-info {
-            margin-top: 20px;
-            font-style: italic;
+            padding: 10px;
+            background-color: #f1f1f1;
+            text-align: center;
         }
     </style>
 </head>
+
 <body>
 
     <h1>Privacy Policy</h1>
-    <p><strong>Last Updated: September 6, 2024</strong></p>
-    <p>Welcome to the CubeOne App! Your privacy is critically important to us, and we are committed to protecting your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your data when using our mobile application ("App"). By using CubeOne, you agree to the collection and use of your information as described in this policy.</p>
+    <p><strong>Last Updated:</strong> September 6, 2024</p>
+    <p>Welcome to CubeOne App! Your privacy is important to us. This Privacy Policy explains how we collect, use,
+        disclose, and protect your information when you use our application ("App"). By using our App, you agree to the
+        collection and use of information in accordance with this policy.</p>
 
-    <h2>1. About the Company</h2>
-    <p>CubeOne is owned and managed by FUTURESCAPE TECHNOLOGIES PVT. LTD., a company incorporated under the Companies Act, 1956, with its registered office in Navi Mumbai, India.</p>
-
-    <h2>2. Data Controller and Contact Information</h2>
-    <p>FUTURESCAPE TECHNOLOGIES PVT. LTD. acts as the Data Controller for the CubeOne App. For any privacy concerns, please contact our Data Protection Officer (DPO):</p>
-    <div class="contact-info">
-        <p>Email: <a href="mailto:support@futurescapetech.com">support@futurescapetech.com</a></p>
-        <p>Phone: +91 987 021 9450</p>
-        <p>Address: 1905 Cyber One, Plot No. 4 & 6, Sector 30-A, Vashi, Navi Mumbai 400 703, Maharashtra, India.</p>
+    <div class="section">
+        <h2>1. About the Company</h2>
+        <p>CubeOne is owned and managed by FUTURESCAPE TECHNOLOGIES PVT. LTD., a company incorporated under the
+            Companies Act, 1956, with its registered office in Navi Mumbai, India.</p>
     </div>
 
-    <h2>3. Information We Collect</h2>
-    <h3>3.1 Personal Information</h3>
-    <p>We collect the following personal information to facilitate app functionalities and enhance user experience:</p>
-    <ul>
-        <li><strong>User ID, Name, Email Address, and Phone Number:</strong> Collected for account management, authentication, and support.</li>
-        <li><strong>Contacts:</strong> Collected for synchronization and sharing features, only with your explicit consent.</li>
-        <li><strong>Text Messages (SMS):</strong> We access SMS to read one-time passwords (OTP) for account verification and authentication purposes only.</li>
-        <li><strong>Calendar:</strong> Accessed for setting reminders and scheduling meetings, based on your consent.</li>
-        <li><strong>Purchase History:</strong> Collected to manage in-app purchases and provide transactional records, with your consent.</li>
-        <li><strong>Device ID and Usage Data:</strong> Collected to improve app performance and security.</li>
-        <li><strong>Precise Location Data:</strong> Collected to provide location-based services with your consent.</li>
-        <li><strong>Camera and Microphone:</strong> Accessed for multimedia features such as video calls or taking photos, with your permission.</li>
-        <li><strong>Biometric Data:</strong> Collected for secure authentication (e.g., fingerprint or facial recognition), based on your consent.</li>
-        <li><strong>Address Data:</strong> Collected to manage purchases, deliveries, or for service personalization.</li>
-    </ul>
+    <div class="section">
+        <h2>2. Data Controller and Contact Information</h2>
+        <p>FUTURESCAPE TECHNOLOGIES PVT. LTD. is responsible for your data. If you have any concerns, please contact our
+            Data Protection Officer (DPO):</p>
+        <div class="contact-info">
+            <p><strong>Email:</strong> support@futurescapetech.com</p>
+            <p><strong>Phone:</strong> +91 987 021 9450</p>
+            <p><strong>Address:</strong> 1905 Cyber One, Plot No. 4 & 6, Sector 30-A, Vashi, Navi Mumbai 400 703,
+                Maharashtra, India.</p>
+        </div>
+    </div>
 
-    <h3>3.2 Non-Personal Information</h3>
-    <p>We also collect non-identifiable data such as device type, operating system, and interactions within the app to improve functionality.</p>
+    <div class="section">
+        <h2>3. Information We Collect</h2>
+        <p>We collect information to provide and improve our services.</p>
+        <h3>3.1 Personal Information</h3>
+        <ul>
+            <li>User ID, Name, Email Address, and Phone Number: Collected for account creation, personalization, and
+                support.</li>
+            <li>Contacts: Accessed for features like sharing and synchronization, only with your consent.</li>
+            <li>SMS: Accessed to read one-time passwords (OTP) for secure login and verification purposes.</li>
+            <li>Calendar: Accessed for setting reminders and scheduling, with your permission.</li>
+            <li>Purchase History: Collected to manage in-app purchases and provide transaction records.</li>
+            <li>Location: Used for location-based services, only with your consent.</li>
+            <li>Camera and Microphone: Used for video calls or capturing photos, with your consent.</li>
+            <li>Biometric Data: Used for secure authentication, such as fingerprint or face recognition.</li>
+            <li>Address: Collected for purposes like delivery and in-app purchases, when required.</li>
+        </ul>
+        <h3>3.2 Non-Personal Information</h3>
+        <p>We may collect non-identifiable data about your device and interactions with the app, such as device type,
+            operating system, and app usage patterns.</p>
+    </div>
 
-    <h2>4. How We Use Your Information</h2>
-    <p>We use the data collected for the following purposes:</p>
-    <ul>
-        <li>To provide and maintain app functionalities.</li>
-        <li>To personalize services and enhance user experience.</li>
-        <li>To process payments securely and manage purchases.</li>
-        <li>To detect and prevent fraudulent activities.</li>
-        <li>To comply with legal obligations and regulatory requirements.</li>
-    </ul>
+    <div class="section">
+        <h2>4. How We Use Your Information</h2>
+        <p>We use your data to:</p>
+        <ul>
+            <li>Provide and maintain app functionalities.</li>
+            <li>Personalize and improve user experience.</li>
+            <li>Process payments and manage in-app purchases.</li>
+            <li>Detect and prevent fraud.</li>
+            <li>Comply with legal obligations.</li>
+        </ul>
+    </div>
 
-    <h2>5. Legal Basis for Processing Your Data</h2>
-    <p>We process data based on:</p>
-    <ul>
-        <li><strong>Consent:</strong> For access to features such as location services, text messages, and contacts.</li>
-        <li><strong>Contractual Necessity:</strong> To provide app services and customer support.</li>
-        <li><strong>Legitimate Interest:</strong> To improve security, detect fraud, and enhance the app.</li>
-        <li><strong>Legal Compliance:</strong> To meet legal obligations, such as regulatory compliance.</li>
-    </ul>
+    <div class="section">
+        <h2>5. Legal Basis for Processing Your Data</h2>
+        <p>We process your data on the following grounds:</p>
+        <ul>
+            <li>Consent: For accessing contacts, SMS, location, and other personal data.</li>
+            <li>Contractual Necessity: To provide app services.</li>
+            <li>Legitimate Interest: For fraud prevention and improving security.</li>
+            <li>Legal Compliance: To meet legal and regulatory requirements.</li>
+        </ul>
+    </div>
 
-    <h2>6. Data Retention</h2>
-    <p>Your data is retained as long as necessary to fulfill the purposes outlined in this policy. Once no longer required, the data is securely deleted.</p>
+    <div class="section">
+        <h2>6. Data Retention</h2>
+        <p>We retain your data for as long as needed to provide services or comply with legal obligations. After that, it
+            is securely deleted.</p>
+    </div>
 
-    <h2>7. Data Sharing</h2>
-    <p>We do not sell or rent your personal information to third parties. However, anonymized, aggregated data may be shared with trusted partners for analytics and app improvement. All sensitive data is processed via our middleware API, ensuring that actual data is anonymized and secure.</p>
+    <div class="section">
+        <h2>7. Data Sharing</h2>
+        <p>We do not sell or rent your personal information. However, we may share anonymized data with trusted partners
+            to improve our app. All sensitive data is processed through our middleware API, ensuring security and
+            anonymity.</p>
+    </div>
 
-    <h2>8. Data Security</h2>
-    <p>We have implemented robust security measures, including 256-bit SSL encryption, to protect your personal information. Access to your data is restricted to authorized personnel only, and we ensure that third-party access is controlled and secure.</p>
+    <div class="section">
+        <h2>8. Data Security</h2>
+        <p>We protect your data with encryption (e.g., 256-bit SSL) and restrict access to authorized personnel only.
+            Your information is never shared with third parties without your explicit consent.</p>
+    </div>
 
-    <h2>9. Your Privacy Rights</h2>
-    <p>Depending on your location, you may have the following rights:</p>
-    <ul>
-        <li><strong>Right to Access:</strong> You can request a copy of the information we hold about you.</li>
-        <li><strong>Right to Rectify:</strong> You can request corrections to inaccurate data.</li>
-        <li><strong>Right to Erasure:</strong> You can request the deletion of your data under certain circumstances.</li>
-        <li><strong>Right to Lodge a Complaint:</strong> You have the right to lodge a complaint with a supervisory authority if you believe your data has been misused or mishandled.</li>
-        <li><strong>Right to Withdraw Consent:</strong> You may withdraw your consent at any time where data processing is based on consent.</li>
-    </ul>
-    <p>For users in the EU, you can lodge a complaint with the Data Protection Authority in your country if you have concerns about how we handle your data.</p>
+    <div class="section">
+        <h2>9. Your Rights</h2>
+        <p>You may have the following rights:</p>
+        <ul>
+            <li><strong>Access:</strong> Request a copy of your data.</li>
+            <li><strong>Correction:</strong> Request updates or corrections to your data.</li>
+            <li><strong>Deletion:</strong> Request deletion of your data under certain conditions.</li>
+            <li><strong>Lodge a Complaint:</strong> You have the right to lodge a complaint with a supervisory authority
+                if you believe your data is being misused.</li>
+            <li><strong>Withdraw Consent:</strong> You can withdraw your consent at any time.</li>
+        </ul>
+    </div>
 
-    <h2>10. Permissions and API Access</h2>
-    <p>Permissions are requested incrementally to ensure transparency and to access only the data necessary for providing app services. We clearly explain the use of each permission at the time of request and provide context for its necessity.</p>
+    <div class="section">
+        <h2>10. Permissions and API Access</h2>
+        <p>We request permissions incrementally, explaining each request's purpose. We only use the data for the
+            purposes you've consented to, and you can opt out anytime.</p>
+    </div>
 
-    <h2>11. Third-Party Services</h2>
-    <p>CubeOne may link to third-party services, which have their own privacy policies. We encourage users to review those policies before engaging with third-party services.</p>
+    <div class="section">
+        <h2>11. Third-Party Services</h2>
+        <p>Our app may contain links to third-party services, but we are not responsible for their privacy practices. We
+            encourage you to review their privacy policies.</p>
+    </div>
 
-    <h2>12. Changes to This Policy</h2>
-    <p>This Privacy Policy may be updated periodically to reflect changes in our practices. We will notify you of any significant updates through the app or via email.</p>
+    <div class="section">
+        <h2>12. Changes to This Policy</h2>
+        <p>We may update this Privacy Policy from time to time. We will notify you of any changes by updating this page.
+            You are advised to review this policy periodically.</p>
+    </div>
 
-    <h2>13. Contact Us</h2>
-    <p>For any questions or concerns about this Privacy Policy, please contact us:</p>
-    <div class="contact-info">
-        <p>Email: <a href="mailto:support@futurescapetech.com">support@futurescapetech.com</a></p>
-        <p>Address: 1905 Cyber One, Plot No. 4 & 6, Sector 30-A, Vashi, Navi Mumbai 400 703, Maharashtra, India.</p>
+    <div class="section">
+        <h2>13. Contact Us</h2>
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us:</p>
+        <div class="contact-info">
+            <p><strong>Email:</strong> support@futurescapetech.com</p>
+            <p><strong>Address:</strong> 1905 Cyber One, Plot No. 4 & 6, Sector 30-A, Vashi, Navi Mumbai 400 703,
+                Maharashtra, India.</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 FUTURESCAPE TECHNOLOGIES PVT. LTD. All rights reserved.</p>
     </div>
 
 </body>
+
 </html>
